[gd_scene load_steps=14 format=3 uid="uid://dujinn525ybqy"]

[ext_resource type="Texture2D" uid="uid://ub36fsps2v5o" path="res://Resources/Sprites/FeatherBubble-9fr.png" id="1_wdib7"]
[ext_resource type="Script" uid="uid://sbwxavdd00f8" path="res://Scripts/feather.gd" id="2_wdib7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wdib7"]
atlas = ExtResource("1_wdib7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp3o4"]
atlas = ExtResource("1_wdib7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_paygo"]
atlas = ExtResource("1_wdib7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvwxg"]
atlas = ExtResource("1_wdib7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nnjv"]
atlas = ExtResource("1_wdib7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7bw6"]
atlas = ExtResource("1_wdib7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_463cm"]
atlas = ExtResource("1_wdib7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dalnd"]
atlas = ExtResource("1_wdib7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_actdu"]
atlas = ExtResource("1_wdib7")
region = Rect2(384, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_h8cag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdib7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp3o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paygo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvwxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nnjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7bw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_463cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dalnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_actdu")
}],
"loop": true,
"name": &"Featherbubble",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nnefc"]
radius = 6.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_h8cag")
animation = &"Featherbubble"
autoplay = "Featherbubble"
frame_progress = 0.916312
script = ExtResource("2_wdib7")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_nnefc")

[connection signal="animation_looped" from="." to="." method="_on_animation_looped"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
